# jenkins-tour

./: .gitignore  Jenkinsfile  README.md
java-project/: Dockerfile  README.md  pom.xml
java-project/src/main/java/com/example/jenkinstour/: App.java
python-project/: Dockerfile  Dockerfile.test  README.md  docker-compose.test.yml  main.py  pyproject.toml
python-project/alembic/: env.py
python-project/alembic/versions/: 0001_create_users.py
python-project/python_project/: __init__.py  app.py  db.py  main.py  models.py
python-project/tests/: test_health.py
vue-project/: .dockerignore  Dockerfile  README.md  nginx.conf  package.json
